force-app/main/default/objects/User_Information__c/User_Information__c.object-meta.xml
<CustomObject>
    <label>User Information</label>
    <nameField>
        <displayFormat>UN - {0000} - {MM}{YY}</displayFormat>
        <label>User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>