force-app/main/default/objects/User_Information__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>11</length>
    <type>Text</type>
</CustomField>