force-app/main/default/objects/User_Information__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>11</length>
    <type>Text</type>
</CustomField>