force-app/main/default/objects/User_Information__c/fields/User_Information__c.field-meta.xml
<CustomField>
    <fullName>User_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Information</label>
    <referenceTo>User_Information__c</referenceTo>
    <relationshipLabel>Users Information</relationshipLabel>
    <relationshipName>Users_Information</relationshipName>
    <type>Lookup</type>
</CustomField>